<resources>
    <string name="app_name">掌上天锻</string>

    <!--login activity-->
    <string name="login_title">欢迎使用掌上天锻</string>
    <string name="login_phone">手机号</string>
    <string name="login_password">密码</string>
    <string name="login">登录</string>

    <!-- button bar -->
    <string name="bar_message">消息</string>
    <string name="bar_me">我的</string>
    <string name="bar_repair">报修</string>
    <string name="bar_maintain">维修</string>

    <!-- item detail -->
    <string name="item_detail_contract_engineer">联系他</string>
    <string name="item_detail_repair_completed">完成</string>
    <string name="item_detail_contract_customer_service">联系客服</string>

    <!-- repair activity -->
    <string name="repair_new">新建报修</string>

    <!-- repair status -->
    <string name="repair_status_committed">提交报修</string>
    <string name="repair_status_distributing">派单</string>
    <string name="repair_status_completed">报修完成</string>

    <!-- suggest argue activity -->
    <string name="suggest_title">建议（可空）</string>
    <string name="suggest_hint">10-500字</string>
    <string name="argue_title">投诉（可空）</string>
    <string name="argue_ticket">清单号</string>
    <string name="argue_name">投诉对象姓名</string>
    <string name="argue_reason">原因</string>

    <!-- new repair activity -->
    <string name="repair_new_device_name">设备名称</string>
    <string name="repair_new_device_name_note">*需填写设备标签上的设备名称</string>
    <string name="repair_new_device_code">设备编号</string>
    <string name="repair_new_question_description">问题描述</string>
    <string name="repair_new_question_description_hint">10-300字，请简述故障状态</string>
    <string name="repair_new_fault_part">故障部位（选填）</string>
    <string name="repair_new_picture">图片</string>
    <string name="repair_new_audio">语音</string>
    <string name="repair_new_video">视频</string>
    <string name="repair_new_company">单位</string>
    <string name="repair_new_address">地址</string>
    <string name="repair_new_commit">提交</string>

    <!-- repair detail activity -->
    <string name="repair_detail_device_name">设备名称:</string>
    <string name="repair_detail_device_code">设备编号:</string>
    <string name="repair_detail_fault_part">故障部位:</string>
    <string name="repair_detail_question_description">问题描述:</string>

    <!-- me activity -->
    <string name="me_emall">商城</string>
    <string name="me_devices">我的设备</string>
    <string name="me_repairs">我的报修</string>
    <string name="me_setting">设置</string>
    <string name="me_contract_service">联系我们</string>

    <string name="str_btn_normal">按下 说话</string>
    <string name="str_btn_recording">松开 发送</string>
    <string name="str_btn_cancel">松开 取消发送</string>


    <string name="permission_cus_item_camera">照相机</string>
    <string name="permission_cus_item_read">读取sd卡</string>
    <string name="permission_cus_item_write">修改sd卡</string>
    <string name="permission_cus_item_phone">手机状态</string>
    <string name="permission_cus_item_audio">录音</string>

</resources>
