<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_new_repair"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f5f6"
    android:orientation="vertical">

    <include layout="@layout/layout_top_bar" />

    <ScrollView
        android:id="@+id/sv_new_repair"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/scroll_linear_layout_new_repair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/general_small_margin"
            android:paddingLeft="@dimen/general_margin"
            android:paddingRight="@dimen/general_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="@dimen/general_small_margin">

                <TextView
                    style="@style/new_repair_textview"
                    android:text="@string/repair_new_device_name" />

                <EditText
                    android:id="@+id/et_new_repair_name"
                    style="@style/new_repair_edit"
                    android:maxLines="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repair_new_device_name_note"
                    android:textColor="#a2a2a2"
                    android:textSize="11sp" />

                <TextView
                    style="@style/new_repair_textview"
                    android:text="@string/repair_new_device_code" />

                <EditText
                    android:id="@+id/et_new_repair_code"
                    style="@style/new_repair_edit"
                    android:maxLines="1" />

                <TextView
                    style="@style/new_repair_textview"
                    android:text="@string/repair_new_question_description" />

                <EditText
                    android:id="@+id/et_new_repair_question_description"
                    style="@style/new_repair_edit"
                    android:fadeScrollbars="true"
                    android:gravity="left"
                    android:hint="@string/repair_new_question_description_hint"
                    android:maxLines="5"
                    android:minHeight="100dp"
                    android:scrollbars="vertical" />

                <TextView
                    style="@style/new_repair_textview"
                    android:text="@string/repair_new_fault_part" />

                <EditText
                    android:id="@+id/et_new_repair_fault_part"
                    style="@style/new_repair_edit"
                    android:maxLines="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general_margin"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    style="@style/new_repair_textview"
                    android:text="@string/repair_new_picture" />

                <HorizontalScrollView
                    android:id="@+id/sv_new_repair_pictures"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fadeScrollbars="false"
                    android:scrollbars="horizontal">

                    <LinearLayout
                        android:id="@+id/scroll_linear_layout_new_repair_pictures"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/general_margin">

                        <LinearLayout
                            android:id="@+id/ll_new_repair_images"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        </LinearLayout>

                        <Button
                            android:id="@+id/bn_new_repair_add_picture"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_marginLeft="@dimen/general_margin"
                            android:layout_marginRight="@dimen/general_margin"
                            android:background="@mipmap/icon_add" />


                    </LinearLayout>

                </HorizontalScrollView>

                <TextView
                    style="@style/new_repair_textview"
                    android:text="@string/repair_new_video" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_new_repair_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <Button
                        android:id="@+id/bn_new_repair_add_video"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginLeft="@dimen/general_margin"
                        android:layout_marginRight="@dimen/general_margin"
                        android:background="@mipmap/ic_video_capture" />

                </LinearLayout>

                <TextView
                    style="@style/new_repair_textview"
                    android:text="@string/repair_new_audio" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general_margin"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="@dimen/general_small_margin">

                <TextView
                    style="@style/new_repair_textview"
                    android:text="@string/repair_new_company" />

                <EditText
                    android:id="@+id/et_new_repair_company"
                    style="@style/new_repair_edit"
                    android:maxLines="2" />

                <TextView
                    style="@style/new_repair_textview"
                    android:text="@string/repair_new_address" />

                <EditText
                    android:id="@+id/et_new_repair_address"
                    style="@style/new_repair_edit"
                    android:maxLines="2" />

            </LinearLayout>

            <Button
                android:id="@+id/bn_new_repair_commit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/general_margin"
                android:layout_marginTop="@dimen/general_large_margin"
                android:background="@drawable/selector_login_button"
                android:text="@string/repair_new_commit" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
