<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f5f6"
    android:orientation="vertical">

    <include layout="@layout/layout_top_bar" />

    <ScrollView
        android:id="@+id/sv_suggest_argue"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/scroll_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/general_small_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="@dimen/general_margin"
                android:paddingLeft="@dimen/general_medium_margin"
                android:paddingRight="@dimen/general_medium_margin">

                <TextView
                    style="@style/suggest_argue_text"
                    android:text="@string/suggest_title" />

                <EditText
                    android:id="@+id/et_suggest"
                    style="@style/new_repair_edit"
                    android:fadeScrollbars="true"
                    android:gravity="left"
                    android:hint="@string/suggest_hint"
                    android:maxLines="6"
                    android:minHeight="100dp"
                    android:scrollbars="vertical" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general_medium_margin"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="@dimen/general_margin"
                android:paddingLeft="@dimen/general_medium_margin"
                android:paddingRight="@dimen/general_medium_margin">

                <TextView
                    style="@style/suggest_argue_text"
                    android:text="@string/argue_title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="@dimen/general_margin"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/suggest_argue_subtext"
                        android:text="@string/argue_ticket" />

                    <EditText
                        android:id="@+id/et_argue_ticket"
                        style="@style/new_repair_edit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.5"
                        android:maxLines="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/general_margin"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/suggest_argue_subtext"
                        android:text="@string/argue_name" />

                    <EditText
                        android:id="@+id/et_argue_name"
                        style="@style/new_repair_edit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.5"
                        android:maxLines="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/suggest_argue_subtext"
                        android:text="@string/argue_reason" />

                    <EditText
                        android:id="@+id/et_argue_reason"
                        style="@style/new_repair_edit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.5"
                        android:maxLines="1" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/bn_suggest_argue_commit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/general_margin"
                android:layout_marginLeft="@dimen/general_medium_margin"
                android:layout_marginRight="@dimen/general_medium_margin"
                android:layout_marginTop="@dimen/general_large_margin"
                android:background="@drawable/selector_login_button"
                android:text="@string/repair_new_commit" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>
