<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bar_height"
    android:layout_gravity="bottom"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/button_bar_border" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_bar_message"
                android:layout_width="@dimen/bar_image_size"
                android:layout_height="@dimen/bar_image_size"
                android:src="@mipmap/ic_message_default" />

            <TextView
                android:id="@+id/tv_bar_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bar_message"
                android:textColor="@color/button_bar_text_default"
                android:textSize="@dimen/bar_text_size" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_bar_role"
                android:layout_width="@dimen/bar_image_size"
                android:layout_height="@dimen/bar_image_size"
                android:src="@mipmap/ic_repair_default" />

            <TextView
                android:id="@+id/tv_bar_repair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bar_repair"
                android:textColor="@color/button_bar_text_default"
                android:textSize="@dimen/bar_text_size" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_bar_me"
                android:layout_width="@dimen/bar_image_size"
                android:layout_height="@dimen/bar_image_size"
                android:src="@mipmap/ic_me_default" />

            <TextView
                android:id="@+id/tv_bar_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bar_me"
                android:textColor="@color/button_bar_text_default"
                android:textSize="@dimen/bar_text_size" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
